saw that the sponsored tag wasnt displaying. Unfortunaletly ugly, but showing

--- a/src/app/components/RecipeCard/RecipeCard.module.scss
+++ b/src/app/components/RecipeCard/RecipeCard.module.scss
@@ -43,6 +43,15 @@
       color: #333;
       font-weight: 600;
     }
+
+    .sponsored{
+      background-color: #e5b5ac;
+      padding: 0.25rem 0.75rem;
+      font-size: 0.75rem;
+      font-weight: 600;
+      color: #fff;
+      border-radius: 10px;
+    }
   }
   
   .recipeWrapper {
