fixed image and responsiveness

--- a/src/app/components/RecipeCard/RecipeCard.module.scss
+++ b/src/app/components/RecipeCard/RecipeCard.module.scss
@@ -7,10 +7,10 @@
     align-items: center;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
-    width: 85%; 
     text-align: center;
     min-height: 530px;
     margin-bottom: 10px;
+    position: relative;
   }
   
   .tagWrapper {
@@ -53,6 +53,15 @@
       border-radius: 10px;
     }
   }
+
+  .imgWrapper {
+    position: relative;
+    width: 100%;
+    aspect-ratio: 3 / 2;
+
+  }
+
+
   
   .recipeWrapper {
     display: flex;
